# discordbot

./: .gitignore  debat.txt  gages.txt  main.py  pyproject.toml  requirements.txt  textlist.txt  upload.py  webpage.py
templates/: dialogflow.html  upload.html
