[tool.poetry]
name = "discrod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2020.12.26"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
werkzeug = "^1.0.1"
coinbase = "^2.1.0"
sentry-sdk = "^0.20.3"
streamlink = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
